[package]
name = "hyperlog_simd"
version = "0.1.0"
edition = "2021"
authors = ["Brandon McMillan <brandon.mcmillan@icloud.com>"]
license = "MIT"

[dependencies]
nanorand = "0.7.0"
lz4 = "1.24.0"
seahash = "4.1.0"
streaming_algorithms = "0.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
base64 = "0.21.4"

[target.'cfg(target_arch = "aarch64")'.dependencies]
packed_simd = { version = "0.3.9", features = ["libcore_neon", "into_bits"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
packed_simd = { version = "0.3.9", features = ["core_arch", "into_bits"] }

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "classic"
path = "examples/classic.rs"

[[example]]
name = "plusplus"
path = "examples/plusplus.rs"

[[bench]]
name = "plusplus"
path = "benches/plusplus.rs"
harness = false

[[bench]]
name = "classic"
path = "benches/classic.rs"
harness = false
