[package]
name = "hyperlog_simd"
version = "0.1.0"
edition = "2021"
authors = ["Brandon McMillan <brandon.mcmillan@icloud.com>"]
license = "MIT"
description = "A SIMD optimized implementation of the HLL and HLL++ algorithms"

[features]
default = ["serde_support"]
serde_support = ["base64", "lz4", "serde/derive", "serde_json"]

[dependencies]
nanorand = "0.7.0"
seahash = "4.1.0"

base64 = { version = "0.21.4", optional = true }
lz4 = { version = "1.24.0", optional = true }
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.107", optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
packed_simd = { version = "0.3.9", features = ["libcore_neon", "into_bits"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
packed_simd = { version = "0.3.9", features = ["into_bits"] }

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "hll"
path = "examples/hll.rs"

[[example]]
name = "plusplus"
path = "examples/plusplus.rs"

[[bench]]
name = "plusplus"
path = "benches/plusplus.rs"
harness = false

[[bench]]
name = "hll"
path = "benches/hll.rs"
harness = false
